--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Random HAIKU</title>
 </head>
+
 <body>
-    <button id="generate">俳句を生成</button>
-
-    <br>
-    <br>
-
-    <div class="haiku">
+    <h1>Random HAIKU</h1>
+    <div id="haiku">
         <div id="first_row"></div>
         <div id="second_row"></div>
         <div id="third_row"></div>
     </div>
+    
+    <button id="generate">俳句を生成</button>
     
     <script src="script.js"></script>
 </body>
